[gd_scene load_steps=4 format=3 uid="uid://d1t3dowrd6qgl"]

[ext_resource type="Script" path="res://src/scenes/common/button.gd" id="1_7dpel"]
[ext_resource type="Material" uid="uid://bfc34sndr1832" path="res://res/materials/shake/shake_material.tres" id="1_hr5c2"]
[ext_resource type="FontFile" uid="uid://07jtmouf4f6t" path="res://res/fonts/catfiles/Catfiles.ttf" id="2_x81ou"]

[node name="Button" type="Node2D"]
script = ExtResource("1_7dpel")

[node name="Polygon2D" type="Polygon2D" parent="."]
material = ExtResource("1_hr5c2")
color = Color(0.682353, 0.776471, 0.901961, 1)
polygon = PackedVector2Array(-63, -21, -31.5118, -23.46, 1, -26, 36.0363, -23.3049, 66, -21, 72.0374, -11.5126, 80, 1, 72.5039, 11.1732, 66, 20, 36.8115, 21.7962, 1, 24, -25.4189, 22.3226, -62, 20, -68.8166, 10.9113, -77, 0, -69.9199, -10.6201)

[node name="Label" type="RichTextLabel" parent="."]
self_modulate = Color(0.152941, 0.152941, 0.152941, 1)
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -20.0
offset_right = 70.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_x81ou")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[url={}][center][wave]Credits[/wave][/center][/url]"
scroll_active = false
meta_underlined = false
metadata/_edit_use_anchors_ = true

[connection signal="meta_clicked" from="Label" to="." method="_on_label_meta_clicked"]
[connection signal="mouse_entered" from="Label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_label_mouse_exited"]
